# takumitools

./: LICENSE  README.md  pyproject.toml
takumitools/: apiclient_base.py  code_generator.py  spec_reader.py
